[package]
edition = "2021"
name = "experiments"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" 
carboxyl = "0.2.1" 
mini-redis = "0.4" 
nalgebra = "*" # replace * by the latest version of the crate.
tokio = {version = "1", features = ["full"]}
